Fixed the border shadow by using body.height_auto;  Added margin and padding to the cards so they didn't overlap the arrows.

--- a/css/cover.css
+++ b/css/cover.css
@@ -6,8 +6,8 @@
 a {
   color: purple;
 }
-a:focus,
-a:hover {
+
+a:focus, a:hover {
   color: blueviolet;
 }
 
@@ -21,15 +21,13 @@ a:hover {
   border: .05rem solid #fff;
 }
 
-
 /*
  * Base structure
  */
 
-html {
-  height: 100%;
-  background-color: rgb(132, 54, 160);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+ html, body {
+    height: 100%;  /* Set height to 100% on html and body and the footer went to the bottom of the cover page*/
+    background-color: rgb(132, 54, 160);
 }
 
 body {
@@ -37,10 +35,12 @@ body {
   display: flex;
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  background-color: rgb(132, 54, 160);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem whitesmoke;
   padding: 5px;
-  height: 100%;
+}
+
+body.height_auto {
+    height: auto;
 }
 
 .cover-container {
@@ -108,31 +108,40 @@ body {
   font-weight: 700;
 }
 
-
-/*
- * Footer
- */
-/* .mastfoot {
-    color: rgba(255, 255, 255, .5);
-    border: 1px dotted white;
-} */
-
 header {
   /* border: 2px dotted white; */
   padding: 5px;
 }
 
 main {
-  /* border: 2px dotted white; */
+  /* border: 2px dotted blue; */
   padding: 5px;
 }
-
 
 /*
 /* Follow me button styles
 */
 .follow-me {
     display: none;
+}
+
+/*
+* Card Styles
+*/
+.card {
+    color: purple;
+    padding: 0;
+    margin: 0;
+}
+
+.card.contact {
+    margin: 40px;
+    padding: 30px;
+}
+
+.card.blog {
+    margin: 40px;
+    padding: 30px;
 }
 
 @media screen {
@@ -148,10 +157,6 @@ main {
   .follow-me.horizontal {
     display: block;
   }
-  /* .h1-id, .p-id{
-    text-align: center;
-  } */
-
 }
 
 @media screen and (min-width: 768px) {
@@ -166,10 +171,5 @@ main {
   .h1-id, .p-id{
     text-align: left;
   }
-}
 
-.card {
-  color: purple;
-  padding: 0;
-  margin: 0;
 }
